# ZekNetDeploy

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 2c2717151794_init.py  5102a20005c1_initial_vector_tables.py
app/: main.py
app/core/: config.py  cv_engine.py  database.py  minio_client.py
app/db_models/: attendance_logs.py  attendance_sessions.py  prisoner_schedules.py  prisoners_etalons.py
app/dependencies/: __init__.py  bucket_loader.py  database.py  machine_learning.py  minio.py  photoscan.py  units.py
app/dependencies/providers/: bucket_loader.py  machine_learning.py  minio.py  photoscan.py  prisoners.py  schedule.py  units.py
app/desktop/: attendance_window.py  gui_test.rar  hash.py  main.py  main_window.py  schedule_window.py  units_window.py  users_window.py
app/interfaces/: image_processing.py  vectorization.py
app/modules/attendance/: models.py
app/modules/prisoners/: models.py
app/repositories/: __init__.py  base.py  bucket_loader.py  photoscan.py  prisoners.py  schedule.py  units.py
app/routes/: bucket_loader.py  photoscan.py  schedule.py  units.py
app/schemas/: __init__.py  prisoners.py  schedule.py  unit.py
app/services/: __init__.py  bucket_loader.py  detection_service.py  embedding_service.py  photoscan.py  prisoners.py  schedule.py  units.py
app/utils/: config.yaml  image_processing.py  vectorization.py
