[project]
name = "mlteambackend"
version = "0.1.0"
package-mode = false
description = "Backend for CV Prisoner Recognition System"
authors = [
    {name = "Akhmedov Alexandr",email = "mage.com666@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.139.0,<0.140.0)",
    "uvicorn[standard] (>=0.49.0,<0.50.0)",
    "sqlalchemy[asyncio] (>=2.0.51,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "pgvector (>=0.4.2,<0.5.0)",
    "alembic (>=1.18.5,<2.0.0)",
    "aioboto3 (>=15.5.0,<16.0.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)",
    "insightface (>=1.0.1,<2.0.0)",
    "python-multipart (>=0.0.32,<0.0.33)",
    "torch (>=2.12.1,<3.0.0)",
    "onnxruntime (>=1.27.0,<2.0.0)",
    "faiss-cpu (>=1.14.3,<2.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "psycopg2 (>=2.9.12,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pyside6 (>=6.11.1,<7.0.0)",
    "qasync (>=0.28.0,<0.29.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "types-aioboto3[s3] (>=15.5.0,<16.0.0)"
]

[tool.poetry.dependencies]
python = ">=3.11,<3.15" # <-- ИСПРАВЬ ЭТУ СТРОКУ ТУТ